css/styles.css
/* #region Variables */
:root {
  /* Fonts */
  --font-family: "Roboto", sans-serif;
  --second-family: "Raleway", sans-serif;

  /* Colors */
  --iris: #4d5ae5;
  --ocean: #404bbf;
  --navy-blue: #2e2f42;
  --green: #31d0aa;
  --slate: #434455;
  --light-slate: #8e8f99;
  --cornflower: #e7e9fc;
  --cloud: #f4f4fd;
  --navy-blue-modal: rgba(46, 47, 66, 0.4);
  --grey: rgba(46, 47, 66, 0.7);
  --white: #fff;
  --dairy: #fcfcfc;

  /* Others */
  --items: 4;
  --ident-row: 48px;
  --ident-col: 24px;
}

/* #endregion Variables */

/* #region Base */

body {
  font-family: var(--font-family);
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 2%;
  background-color: var(--white);
  color: var(--slate);
}

address {
  font-style: normal;
}

a {
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  text-align: center;
}

ul,
ol {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

button {
  font-family: inherit;
  color: currentColor;
  cursor: pointer;
}

/* #endregion Base */

/* #region Common */

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.section {
  padding: 120px 0;
}

.container {
  width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}

.team-title,
.portfolio-title {
  margin-bottom: 72px;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  text-transform: capitalize;
  letter-spacing: 0.02em;
  text-align: center;
  color: var(--navy-blue);
}

.logo {
  font-family: var(--second-family);
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: var(--iris);
}

.logo-light {
  color: var(--cloud);
}

.logo-dark {
  color: var(--navy-blue);
}

/* Card set */
.card-set {
  gap: 24px;
  display: flex;
  flex-wrap: wrap;
  row-gap: var(--ident-row);
  column-gap: var(--ident-col);
}
.card-set-item {
  width: calc((100% - var(--ident-row) * (var(--items) - 1)) / var(--items));
}

/* #endregion Common */

/* #region Header */

.header {
  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
}

.header-container {
  display: flex;
  align-items: center;
}
.header-nav {
  display: flex;
  align-items: center;
  margin-right: 332px;
  flex-grow: 1;
  justify-content: space-between;
}
.header-logo {
  margin-right: 76px;
}
.header-nav-list {
  display: flex;
  align-items: center;
  gap: 40px;
}
.header-nav-item {
}
.header-nav-link {
  padding: 24px 0;
  display: block;
  font-family: var(--font-family);
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
}
.header-nav-link:hover,
.header-nav-link:focus {
  color: var(--ocean);
}
.header-nav-link:active {
  color: var(--ocean);
}
.header-address {
}
.header-address-list {
  display: flex;
  align-items: center;
  gap: 40px;
}
.header-address-link {
  display: block;
  padding: 24px 0;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--slate);
}
.header-address-link:hover,
.header-address-link:focus {
  color: var(--ocean);
}

/* #endregion Header */

/* #region Hero */

.hero-section {
  background-color: var(--navy-blue);
  padding: 188px 0;
  text-align: center;
}
.hero-title {
  margin: 0 auto;
  max-width: 496px;
  font-family: var(--font-family);
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  color: var(--white);
}
.btn {
  display: block;
  height: 56px;
  border: none;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  padding: 16px 32px;
  border-radius: 4px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
  min-width: 169px;
  min-height: 56px;
  margin-top: 48px;
  font-family: var(--font-family);
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: var(--white);
  background-color: var(--iris);
}
.btn:hover,
.btn:focus {
  background-color: var(--ocean);
}
.btn:active {
  background-color: var(--ocean);
}
.btn-accent {
}

/* #endregion Hero */

/* #region Features */
.features-section {
}
.features-title {
}
.features-list {
}
.feature-item {
  width: calc((100% - 72px) / 4);
}
.feature-caption {
  text-align: left;
  margin-bottom: 8px;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
}
.feature-desc {
  text-align: left;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--slate);
}
/* #endregion Features */

/* #region Team */
.team-section {
  background: var(--cloud);
}
.team-title {
}
.team-list {
}

.team-data {
  padding: 32px 0;
}

.team-item {
  width: calc((100% - 72px) / 4);
  border-radius: 0px 0px 4px 4px;
  background: var(--white);
}
.team-capture {
  margin-top: 32px;
  margin-bottom: 8px;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
  color: var(--navy-blue);
}
.team-desc {
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-align: center;
  color: var(--slate);
}
/* #endregion Team */

/* #region Portfolio */

.portfolio {
}
.portfolio-title {
}
.portfolio-list {
  --items: 3;
}

.portfolio-data {
  padding: 32px 16px;
  border-right: 1px solid var(--CORNFLOWER, #e7e9fc);
  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
  border-left: 1px solid var(--CORNFLOWER, #e7e9fc);
}

.portfolio-item {
  width: calc((100% - 48px) / 3);
}
.portfolio-caption {
  margin-bottom: 8px;
  text-align: left;
  font-family: var(--font-family);
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
}
.portfolio-desc {
  text-align: left;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--slate);
}

/* #endregion Portfolio */

/* #region Footer */

.footer {
  background-color: var(--navy-blue);
  padding: 100px 0;
}

.footer-logo {
  display: inline-block;
  margin-bottom: 16px;
}

.footer-slo {
  max-width: 264px;
  text-align: left;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--cloud);
}

/* #endregion Footer */

